@@ -136,6 +136,15 @@ tasks.register('memoryOverhead', JavaExec) {
   group = 'Benchmarks'
   description = 'Evaluates cache overhead'
   classpath sourceSets.jmh.runtimeClasspath
-  jvmArgs "-javaagent:${configurations.javaAgent.singleFile}"
+  classpath sourceSets.codeGen.runtimeClasspath
   mainClass = 'com.github.benmanes.caffeine.cache.MemoryBenchmark'
+  jvmArgs += [
+    '--add-opens', 'java.base/java.util.concurrent.atomic=ALL-UNNAMED',
+    '--add-opens', 'java.base/java.util.concurrent.locks=ALL-UNNAMED',
+    '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED',
+    '--add-opens', 'java.base/java.lang.ref=ALL-UNNAMED',
+    '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+    '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+    "-javaagent:${configurations.javaAgent.singleFile}",
+  ]
 }
